--- a/nths/client/client/index.html
+++ b/nths/client/client/index.html
@@ -19,10 +19,11 @@
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular.min.js"></script>
   -->
   <script src="lib/jquery/jquery.min.js"></script>
-  <script src="lib/angular/angular.min.js"></script>
-  <script src="lib/angular/angular-resource.min.js"></script>
-  <script src="lib/angular/angular-cookies.min.js"></script>
-  <script src="lib/angular/angular-ui-router.min.js"></script>
+  <script src="lib/angular/angular.js"></script>
+  <script src="lib/angular/angular-resource.js"></script>
+  <script src="lib/angular/angular-cookies.js"></script>
+  <script src="lib/angular/angular-route.js"></script>
+  <script src="lib/angular/angular-ui-router.js"></script>
 
   <!-- UI Libs   -->
   <script src="lib/twitter/bootstrap.js"></script>
