--- a/nths/client/client/index.html
+++ b/nths/client/client/index.html
@@ -32,6 +32,8 @@
   <script src="js/app.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/services.js"></script>
+  <script src="js/filters.js"></script>
+  <script src="js/directives.js"></script>
 </body>
 </html>
 
